<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nodeflux.africacareerguide.MainActivity">

    <Button
        android:text="@string/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:id="@+id/button"
        android:onClick="onClick (MainActivity)" />

    <ImageView
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_trans"
        android:id="@+id/imageViewLogo"
        android:cropToPadding="true"
        android:adjustViewBounds="true"
        android:layout_width="200dp"
        android:contentDescription="@string/logo_content_description"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp" />

    <TextView
        android:text="@string/app_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitle"
        android:textSize="24sp"
        android:layout_marginTop="58dp"
        android:layout_alignTop="@+id/imageViewLogo"
        android:layout_toEndOf="@+id/imageViewLogo" />

    <TextView
        android:text="@string/country_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCountrySelect"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/imageViewLogo"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCountrySelect"
        android:layout_alignTop="@+id/textCountrySelect"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

</RelativeLayout>
