<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCourseName"
            android:textSize="24sp"
            android:padding="10dp" />

        <TextView
            android:text="@string/universities_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewUniHeading"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:paddingRight="15dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:text="@string/universities_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUniName"
                    android:drawableTop="@android:drawable/ic_menu_camera"
                    android:padding="10dp" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</android.support.v7.widget.CardView>